fix: errores de escritura (ux) en base

--- a/project/core/templates/core/base.html
+++ b/project/core/templates/core/base.html
@@ -9,7 +9,7 @@
         <meta name="author" content="" />
         <title>
             {% block title %}
-                Bienvedio a Mascotapp
+                Bienvenido/a a Mascotapp
             {% endblock title %}
         </title>
         <!-- Favicon-->
