--- a/project/core/templates/core/base.html
+++ b/project/core/templates/core/base.html
@@ -37,7 +37,7 @@
                             <li class="nav-item">
                                 <form action="{% url 'core:logout' %}" method="post">
                                     {% csrf_token %}
-                                    <button type="submit" class="btn btn-dark">Logout</button>
+                                    <button type="submit" class="btn btn-dark">Cerrar sesión</button>
                                 </form>
                             </li>
                         {% else %}
