--- a/project/core/templates/core/sobre_mi.html
+++ b/project/core/templates/core/sobre_mi.html
@@ -6,9 +6,9 @@
     <h1>Sobre mi</h1>
     <p>¡Hola a todos! Soy Mariana Álvarez Flores, ¡pero pueden llamarme Marian!
         Como periodista cada día es una aventura nueva. Cuando no estoy haciendo auditoría de medios
-    (o monita auditora como le digo a mis compañeros/as) o brindando asesoría en comunicación, 
+    (monita auditora como le digo a mis compañeros/as) o brindando asesoría en comunicación, 
     me transformo en una apasionada bailarina, compartiendo risas y coreografías con mis amigas. 
     En mi vida, los perros ocupan un lugar muy especial. Y fue la experiencia de adoptar a mi perrita Miga (sí, como los sanguchitos)
      lo que me impulsó a crear este proyecto. Creo firmemente en el poder del trabajo en equipo y en mantener siempre una sonrisa
-     , ¡porque con buena actitud todo es más divertido! ¡Gracias por estar aquí y estaré encantada de responder a sus preguntas! 🌟</p>
+     ¡Porque con buena actitud todo es más divertido! ¡Gracias por estar aquí y estaré encantada de responder a sus preguntas! 🌟</p>
 {% endblock contenido %}
