--- a/project/core/templates/core/sobre_mi.html
+++ b/project/core/templates/core/sobre_mi.html
@@ -10,5 +10,5 @@
     me transformo en una apasionada bailarina, compartiendo risas y coreografías con mis amigas. 
     En mi vida, los perros ocupan un lugar muy especial. Y fue la experiencia de adoptar a mi perrita Miga (sí, como los sanguchitos)
      lo que me impulsó a crear este proyecto. Creo firmemente en el poder del trabajo en equipo y en mantener siempre una sonrisa
-     ¡Porque con buena actitud todo es más divertido! ¡Gracias por estar aquí y estaré encantada de responder a sus preguntas! 🌟</p>
+     ¡Porque con buena actitud todo es más divertido! 🌟</p>
 {% endblock contenido %}
