fix: modificaciones index

--- a/project/core/templates/core/index.html
+++ b/project/core/templates/core/index.html
@@ -17,20 +17,17 @@
                  alt="..." />
         </div>
         <div class="col-lg-5">
-            <h1 class="font-weight-light">La Caja de la Pandora</h1>
+            <h1 class="font-weight-light">¿Querés adoptar una mascota?</h1>
             <p>
-                ¿Estpas con ganas de adoptar una mascota? Sabemos que puede ser un proceso largo y difícil, estuvimos ahí. Por eso creamos Mascotapp para ayudarte a encontrar a tu compañerito/a de una forma sencilla, sin trabas y con mucha responsabilidad.
+                Sabemos que puede ser un proceso largo y difícil, estuvimos ahí. Por eso creamos Mascotapp para ayudarte a encontrar a tu compañerito/a de una forma sencilla, sin trabas y con mucha responsabilidad.
             </p>
-            <a class="btn btn-primary"
-               href="https://wa.me/542619999999"
-               target="_blank">WhatsApp</a>
         </div>
     </div>
     <!-- Call to Action-->
     <div class="card text-white bg-secondary my-5 py-4 text-center">
         <div class="card-body">
             <p class="text-white m-0">
-                This call to action card is a great place to showcase some important information or display a clever tagline!
+               Tu peludito a unos clicks de distancia
             </p>
         </div>
     </div>
