--- a/project/core/templates/core/index.html
+++ b/project/core/templates/core/index.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load static %}
 {% block titulo %}
-    {% include 'core/components/titulo1.html' with titulo="Mascotapp" %}
+<img src="{% static 'core/css/img/logo.webp' %}" alt="Mascotapp Logo">
 {% endblock titulo %}
 {% block contenido %}
 
