fix: template adopcion_list y base-html

--- a/project/adopcion/templates/adopcion/adopcion_list.html
+++ b/project/adopcion/templates/adopcion/adopcion_list.html
@@ -19,7 +19,7 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th scope="col">Adopción</th>
+                    <th scope="col">Nombre</th>
                     <th scope="col">Acciones</th>
                 </tr>
             </thead>
@@ -41,8 +41,8 @@
         </table>
         <div class="mt-4">
             <a class="btn btn-secondary"
-               href="{% url 'adopcion:home' %}"
-               role="button">Volver al inicio de adopción</a>
+               href="{% url 'core:home' %}"
+               role="button">Volver al inicio</a>
         </div>
     </div>
 {% endblock contenido %}
