--- a/project/core/templates/core/base.html
+++ b/project/core/templates/core/base.html
@@ -32,7 +32,7 @@
                         {% if user.is_authenticated %}
                             <li class="nav-item"><a class="nav-link {% if request.path == '/usuario/' %} active {% endif %}" href="{% url 'usuario:home' %}">Usuarios</a></li>
                             <li class="nav-item"><a class="nav-link {% if request.path == '/mascota/' %} active {% endif %}" href="{% url 'mascota:lista_mascotas' %}">Mascotas</a></li>
-                            <li class="nav-item"><a class="nav-link {% if request.path == '/adopcion/' %} active {% endif %}" href="{% url 'adopcion:lista_adopciones' %}">Adopciones</a></li>
+                            <li class="nav-item"><a class="nav-link {% if request.path == '/adopcion/' %} active {% endif %}" href="{% url 'adopcion:adopcion_list' %}">Adopciones</a></li>
                             <li class="nav-item"><a class="nav-link text-bg-info">{{ user.username }}</a></li>
                             <li class="nav-item">
                                 <form action="{% url 'core:logout' %}" method="post">
