--- a/project/adopcion/templates/adopcion/adopcion_list.html
+++ b/project/adopcion/templates/adopcion/adopcion_list.html
@@ -1,48 +1,48 @@
 {% extends 'core/base.html' %}
+
 {% block titulo %}
-    Adopciones: Lista de mascotas
+Adoptados
 {% endblock titulo %}
+
 {% block contenido %}
-    <div class="container my-5">
-        <div class="py-4">
-            <form class="input-group mb-3"
-                  action="{% url 'adopcion:adopcion_list' %}"
-                  method="get">
-                <input type="text"
-                       class="form-control"
-                       name="consulta"
-                       placeholder="Buscar..."
-                       aria-label="Buscar">
-                <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Buscar</button>
-            </form>
-        </div>
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Acciones</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for adopcion in object_list %}
-                    <tr>
-                        <td>{{ adopcion.nombre }}</td>
-                        <td>
-                            <a class="btn btn-info btn-sm me-1"
-                               href="{% url 'adopcion:adopcion_detail' adopcion.id %}">Detalle</a>
-                            <a class="btn btn-warning btn-sm me-1"
-                               href="{% url 'adopcion:adopcion_update' adopcion.id %}">Cambiar</a>
-                            <a class="btn btn-danger btn-sm"
-                               href="{% url 'adopcion:adopcion_delete' adopcion.id %}">Borrar</a>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <div class="mt-4">
-            <a class="btn btn-secondary"
-               href="{% url 'core:home' %}"
-               role="button">Volver al inicio</a>
-        </div>
-    </div>
+<section class="container my-5">
+    <section class="py-4">
+        <form class="input-group mb-3" action="{% url 'adopcion:adopcion_list' %}" method="get">
+            <input type="text" class="form-control" name="consulta" placeholder="Buscar..." aria-label="Buscar">
+            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Buscar</button>
+        </form>
+    </section>
+
+    {%if not object_list%}
+    <p>No hay mascotas cargadas 🥳</p>
+    {%else%}
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th scope="col">Nombre</th>
+                <th scope="col">Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for adopcion in object_list %}
+            <tr>
+                <td>{{ adopcion.adoptante.username }}</td>
+                <td>
+                    <a class="btn btn-info btn-sm me-1"
+                        href="{% url 'adopcion:adopcion_detail' adopcion.id %}">Detalle</a>
+                    <a class="btn btn-warning btn-sm me-1"
+                        href="{% url 'adopcion:adopcion_update' adopcion.id %}">Cambiar</a>
+                    <a class="btn btn-danger btn-sm" href="{% url 'adopcion:adopcion_delete' adopcion.id %}">Borrar</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+    {%endif%}
+
+    <section class="mt-4">
+        <a class="btn btn-secondary" href="{% url 'core:home' %}" role="button">Volver al inicio</a>
+    </section>
+</section>
 {% endblock contenido %}
