--- a/project/core/templates/core/sobre_mi.html
+++ b/project/core/templates/core/sobre_mi.html
@@ -1,9 +1,9 @@
 {% extends 'core/base.html' %}
 {% block titulo %}
-    Sobre Mí
+    Sobre mi
 {% endblock titulo %}
 {% block contenido %}
-    <h1>Sobre mi</h1>
+   
     <p>¡Hola a todos! Soy Mariana Álvarez Flores, ¡pero pueden llamarme Marian!
         Como periodista cada día es una aventura nueva. Cuando no estoy haciendo auditoría de medios
     (monita auditora como le digo a mis compañeros/as) o brindando asesoría en comunicación, 
