--- a/project/mascota/templates/mascota/mascotacategoria_confirm_delete.html
+++ b/project/mascota/templates/mascota/mascotacategoria_confirm_delete.html
@@ -13,7 +13,7 @@
         <button type="submit" class="btn btn-danger">Confirmar</button>
     </form>
     <div class="fs-3 pb-4">
-        <a href="{% url 'producto:home' %}">Volver al inicio de mascota</a>
+        <a href="{% url 'mascota:home' %}">Volver al inicio de mascota</a>
     </div>
 
 {% endblock contenido %}
