--- a/project/adopcion/templates/adopcion/adopcion_detail.html
+++ b/project/adopcion/templates/adopcion/adopcion_detail.html
@@ -10,7 +10,7 @@
     </ul>
 
     <div class="fs-3 pb-4">
-        <a href="{% url 'producto:producto_list' %}">Volver</a>
+        <a href="{% url 'mascota:mascota_list' %}">Volver</a>
     </div>
 
 {% endblock contenido %}
