--- a/project/core/templates/core/base.html
+++ b/project/core/templates/core/base.html
@@ -28,11 +28,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link {% if request.path == '/' %} active {% endif %}" aria-current="page" href="{% url 'core:home' %}">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link {% if request.path == '/sobre-mi/' %} active {% endif %}" href="{% url 'core:sobre_mi' %}">Sobre Mí</a></li>
+                        <li class="nav-item"><a class="nav-link {% if request.path == '/sobre-mi/' %} active {% endif %}" href="{% url 'core:sobre_mi' %}">Sobre mi</a></li>
                         {% if user.is_authenticated %}
-                            <li class="nav-item"><a class="nav-link {% if request.path == '/usuario/' %} active {% endif %}" href="{% url 'usuario:home' %}">Usuarios</a></li>
                             <li class="nav-item"><a class="nav-link {% if request.path == '/mascota/' %} active {% endif %}" href="{% url 'mascota:lista_mascotas' %}">Mascotas</a></li>
-                            <li class="nav-item"><a class="nav-link {% if request.path == '/adopcion/' %} active {% endif %}" href="{% url 'adopcion:adopcion_list' %}">Adopciones</a></li>
+                            <li class="nav-item"><a class="nav-link {% if request.path == '/adopcion/' %} active {% endif %}" href="{% url 'adopcion:adopcion_list' %}">Pedidos de adopción</a></li>
                             <li class="nav-item"><a class="nav-link text-bg-info">{{ user.username }}</a></li>
                             <li class="nav-item">
                                 <form action="{% url 'core:logout' %}" method="post">
