--- a/project/core/templates/core/components/navbar.html
+++ b/project/core/templates/core/components/navbar.html
@@ -7,9 +7,8 @@
                 <li class="nav-item"><a class="nav-link {% if request.path == "/" %} active {% endif %}" aria-current="page" href="{% url 'core:home' %}">Inicio</a></li>
                 <li class="nav-item"><a class="nav-link {% if request.path == "/about" %} active {% endif %}" href="{% url 'core:about' %}">Nosotros</a></li>
                 {% if user.is_authenticated %}
-                    <li class="nav-item"><a class="nav-link {% if request.path == "/usuario/" %} active {% endif %}" href="{% url 'usuario:home' %}">Usuarios</a></li>
                     <li class="nav-item"><a class="nav-link {% if request.path == "/mascota/" %} active {% endif %}" href="{% url 'mascota:lista_mascotas' %}">Mascotas</a></li>
-                    <li class="nav-item"><a class="nav-link {% if request.path == "/adopcion/" %} active {% endif %}" href="{% url 'adopcion:lista_adopciones' %}">Adopciones</a></li>
+                    <li class="nav-item"><a class="nav-link {% if request.path == "/adopcion/" %} active {% endif %}" href="{% url 'adopcion:lista_adopciones' %}">Adoptados</a></li>
                     <li class="nav-item"><a class="nav-link text-bg-info">{{ user.username }}</a></li>
                     <li class="nav-item">
                         <form action="{% url 'core:logout' %}" method="post">
