--- a/project/mascota/templates/mascota/mascota_list.html
+++ b/project/mascota/templates/mascota/mascota_list.html
@@ -1,37 +1,46 @@
 {% extends 'core/base.html' %}
 {% block titulo %}
-    Mascotas: lista de mascotas
+Mascotas: lista de mascotas
 {% endblock titulo %}
 {% block contenido %}
-    <div class="container my-5">
-        <div class="py-4">
-            <form class="input-group mb-3" action="{% url 'mascota:lista_mascotas' %}" method="get">
-                <input type="text" class="form-control" name="consulta" placeholder="Buscar..." aria-label="Buscar">
-                <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Buscar</button>
-            </form>
-        </div>
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th scope="col">Mascota</th>
-                    <th scope="col">Acciones</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for mascota in object_list %}
-                    <tr>
-                        <td>{{ mascota.nombre }}</td>
-                        <td>
-                            <a class="btn btn-info btn-sm me-1" href="{% url 'mascota:detalle_mascota' mascota.id %}">Detalle</a>
-                            <a class="btn btn-warning btn-sm me-1" href="{% url 'mascota:actualizar_mascota' mascota.id %}">Cambiar</a>
-                            <a class="btn btn-danger btn-sm" href="{% url 'mascota:eliminar_mascota' mascota.id %}">Borrar</a>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <div class="mt-4">
-            <a class="btn btn-secondary" href="{% url 'core:home' %}" role="button">Volver al inicio</a>
-        </div>
-    </div>
+<section class="container my-5">
+    <section class="py-4">
+        <form class="input-group mb-3" action="{% url 'mascota:lista_mascotas' %}" method="get">
+            <input type="text" class="form-control" name="consulta" placeholder="Buscar..." aria-label="Buscar">
+            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Buscar</button>
+        </form>
+    </section>
+
+    {%if not object_list%}
+        <p>No tenemos mascotas en adopción actualmente! 🥳</p>
+    {%else%}
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th scope="col">Mascota</th>
+                <th scope="col">Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for mascota in object_list %}
+            <tr>
+                <td>{{ mascota.nombre }}</td>
+                <td>
+                    <a class="btn btn-info btn-sm me-1"
+                        href="{% url 'mascota:detalle_mascota' mascota.id %}">Detalle</a>
+                    <a class="btn btn-warning btn-sm me-1"
+                        href="{% url 'mascota:actualizar_mascota' mascota.id %}">Cambiar</a>
+                    <a class="btn btn-danger btn-sm" href="{% url 'mascota:eliminar_mascota' mascota.id %}">Borrar</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+    {%endif%}
+
+    <section class="mt-4">
+        <a class="btn btn-secondary" href="{% url 'core:home' %}" role="button">Volver al inicio</a>
+    </section>
+</section>
 {% endblock contenido %}
