--- a/project/mascota/templates/mascota/mascotacategoria_form.html
+++ b/project/mascota/templates/mascota/mascotacategoria_form.html
@@ -20,7 +20,7 @@
         <button type="submit" class="btn btn-primary">Guardar</button>
     </form>
     <div class="fs-3 pb-4">
-        <a href="{% url 'producto:home' %}">Volver al inicio de mascota</a>
+        <a href="{% url 'mascota:home' %}">Volver al inicio de mascota</a>
     </div>
 
 {% endblock contenido %}
