--- a/project/core/templates/core/base.html
+++ b/project/core/templates/core/base.html
@@ -23,7 +23,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container px-5">
-                <a class="navbar-brand" href="{% url 'core:home' %}">Mascotapp</a>
+                <a class="navbar-brand" href="{% url 'core:home' %}"><img src="{% static "core/img/logo.webp.png" %}" alt="Mascotapp"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -52,7 +52,7 @@
             <div class="row align-items-center my-5">
                 <h1 class="pb-lg-3 text-white bg-info px-3 py-2 rounded">
                     {% block titulo %}
-                      Mascotapp
+                     asdasd <img src="{% static "logo.webp.png" %}">
                     {% endblock titulo %}
                 </h1>
             </div>
