fix: agrego manejo de errores en login

--- a/project/core/templates/core/base.html
+++ b/project/core/templates/core/base.html
@@ -52,7 +52,7 @@
             <div class="row align-items-center my-5">
                 <h1 class="pb-lg-3 text-white bg-info px-3 py-2 rounded">
                     {% block titulo %}
-                     asdasd <img src="{% static "logo.webp.png" %}">
+                     <img src="{% static "logo.webp.png" %}">
                     {% endblock titulo %}
                 </h1>
             </div>
