--- a/project/mascota/templates/mascota/actualizar_mascota.html
+++ b/project/mascota/templates/mascota/actualizar_mascota.html
@@ -14,7 +14,7 @@
   </form>
 
     <section class="fs-3 pb-4">
-        <a href="{% url 'mascota:lista_mascotas' %}">Volver</a>
+        <a href="{% url 'mascota:mascota_list' %}">Volver</a>
     </section>
 
 {% endblock contenido %}
