--- a/project/mascota/templates/mascota/detalle_mascota.html
+++ b/project/mascota/templates/mascota/detalle_mascota.html
@@ -16,7 +16,7 @@
     <section class="fs-3 pb-4">
 
         <a href="{% url 'adopcion:adopcion_create' %}">Adoptar a {{object.nombre}}</a>
-        <a href="{% url 'mascota:lista_mascotas' %}">Volver</a>
+        <a href="{% url 'mascota:mascota_list' %}">Volver</a>
     </section>
 
 {% endblock contenido %}
