fix: views y mejoro carrusel

--- a/project/core/templates/core/index.html
+++ b/project/core/templates/core/index.html
@@ -10,11 +10,29 @@
         <p class="fs-2">Bienvenido/a {{ user.username }}</p>
     {% endif %}
     <!-- Heading Row-->
-    <div class="row gx-4 gx-lg-5 align-items-center my-5">
+    <div class="row gx-4 gx-lg-5 align-items-center my-2">
         <div class="col-lg-7">
-            <img class="img-fluid rounded mb-4 mb-lg-0"
+           <!-- Heading Row <img class="img-fluid rounded mb-4 mb-lg-0"
                  src="{% static 'core/img/caja.webp' %}"
-                 alt="..." />
+                 alt="..." />-->
+                 <div id="carouselExample" class="carousel slide">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="{% static 'core/img/caja.webp' %}" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="{% static 'core/img/caja2.webp' %}" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
         </div>
         <div class="col-lg-5">
             <h1 class="font-weight-light">¿Querés adoptar una mascota?</h1>
