--- a/project/core/templates/core/sobre_mi.html
+++ b/project/core/templates/core/sobre_mi.html
@@ -5,10 +5,11 @@
 {% block contenido %}
    
     <p>¡Hola a todos! Soy Mariana Álvarez Flores, ¡pero pueden llamarme Marian!
+    
         Como periodista cada día es una aventura nueva. Cuando no estoy haciendo auditoría de medios
-    (monita auditora como le digo a mis compañeros/as) o brindando asesoría en comunicación, 
+    (monita auditora, como suelo describir el trabajo) o brindando asesoría en comunicación, 
     me transformo en una apasionada bailarina, compartiendo risas y coreografías con mis amigas. 
     En mi vida, los perros ocupan un lugar muy especial. Y fue la experiencia de adoptar a mi perrita Miga (sí, como los sanguchitos)
      lo que me impulsó a crear este proyecto. Creo firmemente en el poder del trabajo en equipo y en mantener siempre una sonrisa
-     ¡Porque con buena actitud todo es más divertido! 🌟</p>
+     ¡Porque con buena actitud todo puede ser más divertido! 🌟</p>
 {% endblock contenido %}
