--- a/project/core/templates/core/components/titulo1.html
+++ b/project/core/templates/core/components/titulo1.html
@@ -1,5 +1,5 @@
-<div class="row align-items-center my-5">
-    <h1 class="pb-lg-3 text-white bg-info px-3 py-2 rounded">
+<div class="row align-items-center my-3">
+    <h1 class="pb-lg-3 text-white bg-custom-color px-3 py-2 rounded">
         {{ titulo }}
     </h1>
 </div>
