--- a/project/core/templates/core/index.html
+++ b/project/core/templates/core/index.html
@@ -10,7 +10,7 @@
         <p class="fs-2">Bienvenido/a {{ user.username }}</p>
     {% endif %}
     <!-- Heading Row-->
-    <div class="row gx-4 gx-lg-5 align-items-center my-2">
+    <div class="row gx-4 gx-lg-5 my-2">
         <div class="col-lg-7">
            <!-- Heading Row <img class="img-fluid rounded mb-4 mb-lg-0"
                  src="{% static 'core/img/caja.webp' %}"
@@ -34,11 +34,11 @@
                     </button>
                   </div>
         </div>
-        <div class="col-lg-5 d-flex align-items-center">
-            <div style="text-align: justify; width: 100%;">
+        <div class="col-lg-5 col-md-8 d-flex">
+            <div style=>
                 <h1 class="font-weight-light">¿Querés adoptar una mascota?</h1>
                 <br>
-                <p>
+                <p class=" text-left">
                     Sabemos que puede ser un proceso largo y difícil, estuvimos ahí. Por eso creamos Mascotapp para ayudarte a encontrar a tu compañerito/a de una forma sencilla, sin trabas y con mucha responsabilidad.
                 </p>
             </div>
