--- a/project/mascota/templates/mascota/mascota_form.html
+++ b/project/mascota/templates/mascota/mascota_form.html
@@ -10,16 +10,18 @@
 {% endblock titulo %}
 
 {% block contenido %}
-    
-    <form method="post">
-        {% csrf_token %}
-        <table>
-            {{ form.as_table }}
-        </table>
-        <button type="submit" class="btn btn-primary">Guardar</button>
-    </form>
-    <div class="fs-3 pb-4">
-        <a href="{% url 'mascota:home' %}">Volver al inicio de Mascotas</a>
+<div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+    <div>
+        <form method="post">
+            {% csrf_token %}
+            <table>
+                {{ form.as_table }}
+            </table>
+            <button type="submit" class="btn btn-primary">Guardar</button>
+        </form>
+        <div class="fs-3 pb-4">
+            <a href="{% url 'mascota:home' %}">Volver al inicio de Mascotas</a>
+        </div>
     </div>
-
+</div>
 {% endblock contenido %}
