--- a/project/adopcion/templates/adopcion/adopcioncategoria_confirm_delete.html
+++ b/project/adopcion/templates/adopcion/adopcioncategoria_confirm_delete.html
@@ -13,7 +13,7 @@
         <button type="submit" class="btn btn-danger">Confirmar</button>
     </form>
     <div class="fs-3 pb-4">
-        <a href="{% url 'mascota:home' %}">Volver al inicio de Adopción/a>
+        <a href="{% url 'mascota:home' %}" class="btn btn-secondary">Volver al inicio de adopción</a>
     </div>
 
 {% endblock contenido %}
