--- a/project/adopcion/templates/adopcion/adopcioncategoria_detail.html
+++ b/project/adopcion/templates/adopcion/adopcioncategoria_detail.html
@@ -11,7 +11,7 @@
     </ul>
 
     <div class="fs-3 pb-4">
-        <a href="{% url 'adopcion:adopcioncategoria_list' %}">Volver</a>
+        <a href="{% url 'adopcion:adopcioncategoria_list' %}" class="btn btn-secondary">Volver</a>
     </div>
-
+    
 {% endblock contenido %}
