--- a/project/adopcion/templates/adopcion/adopcioncategoria_list.html
+++ b/project/adopcion/templates/adopcion/adopcioncategoria_list.html
@@ -25,7 +25,6 @@
     </ul>
 
     <div class="fs-3 pb-4">
-        <a href="{% url 'adopcion:home' %}">Volver al inicio de adopción</a>
+        <a href="{% url 'mascota:home' %}" class="btn btn-secondary">Volver al inicio de adopciones</a>
     </div>
-
 {% endblock contenido %}
