--- a/project/mascota/templates/mascota/mascota_form.html
+++ b/project/mascota/templates/mascota/mascota_form.html
@@ -20,7 +20,7 @@
             <button type="submit" class="btn btn-primary">Guardar</button>
         </form>
         <div class="fs-3 pb-4">
-            <a href="{% url 'mascota:home' %}">Volver al inicio de Mascotas</a>
+            <a href="{% url 'mascota:mascota_list' %}" class="btn btn-secondary">Volver al inicio de Mascotas</a>
         </div>
     </div>
 </div>
