--- a/project/adopcion/templates/adopcion/adopcion_form.html
+++ b/project/adopcion/templates/adopcion/adopcion_form.html
@@ -20,7 +20,7 @@
         <button type="submit" class="btn btn-primary">Guardar</button>
     </form>
     <div class="fs-3 pb-4">
-        <a href="{% url 'mascota:home' %}">Volver al inicio de Adopción</a>
+        <a href="{% url 'mascota:home' %}" class="btn btn-secondary">Volver al inicio de adopción</a>
     </div>
 
 {% endblock contenido %}
