--- a/project/core/templates/core/logout.html
+++ b/project/core/templates/core/logout.html
@@ -1,7 +1,14 @@
 {% extends 'core/base.html' %}
 {% block titulo %}
-    Logout
+    ¡Hasta luego!
 {% endblock titulo %}
 {% block contenido %}
-    <h1 class="display-4">Cerraste sesión con éxito</h1>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container text-center">
+            <h1 class="display-4">¡Hasta luego!</h1>
+            <p>
+                🐾❤️✋
+            </p>
+        </div>
+    </div>
 {% endblock contenido %}
